Sets the max height of ImeMenuTray.

The bubble for ImeMenuTray has been set with max height, which is ugly with many IME selected. Limits the height to showing 7 items shown at most.

BUG=640427
TEST=Verified on local build.

Review-Url: https://codereview.chromium.org/2254453002
Cr-Commit-Position: refs/heads/master@{#413912}

Former-commit-id: 5ee46213fbcad7272d5b9c9d7a6492598239c2f1